fix(layout): hide scroll in home and adjust footer visibility
    - Hid the scrollbar in the home page for a cleaner design
    - Fixed footer positioning to prevent it from appearing at the bottom on certain pages
    - Ensured consistent layout across different screen sizes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,3 +22,15 @@ body {
     justify-content: 0;
   }
 }
+
+.scrollbar-hide {
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE y Edge */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari y navegadores basados en WebKit */
+}
